--- a/css/details.css
+++ b/css/details.css
@@ -1,6 +1,9 @@
 .pa{
     padding: 10px;
 }
+.p_left{
+    padding-left: 5px;
+}
 .ce{
     display: flex;
     align-items: center;
@@ -11,20 +14,22 @@
 .ma1{
     margin-bottom: 30px;
 }
-/* .left_fixed{
+.rel{
+    position: relative;
+}
+.top{
+    /* height: 100px; */
+    align-items: center;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    background-color: white;
     position: fixed;
     width: 100%;
-    border: 3px solid pink;
-    margin-left: -50px;
-    font-size: 20px;
-    line-height: 15px;
-    color: rgb(73, 69, 69);
-
-} */
+    z-index: 1;
+    /* margin-bottom: 110px; */
+}
 .card_left{
     position: fixed;
     /* margin-left: -50px; */
-
       width: 18%;
       /* height: 100%; */
       box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
@@ -40,52 +45,50 @@
     /* transform: 1; */
     transition: 0.1s;
 }
-.right_fixed{
-/* margin-left: 25%; */
-}
 
 .co_name {
     background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url(../img/s2.jpeg);
     filter: grayscale(60%);
     height: 200px;
     width: 100%;
-    justify-content: center;
+    display: flex;
+    align-items: center;
+   
+   }
+ .mid{
+    display: flex;
+    align-items: center;
+    margin-left: 20%;
+    } 
+.co2 {
+    width: 100%;
+    color: white ;
+    line-height: 10px;
+    margin: 5%;
 }
 .co_name img{
-    float: left;
-    margin: 20px;
+    /* float: left; */
+    /* margin: 20px; */
     width: 100px;
     background-color: rgb(248, 248, 244);
-    margin-left: 10%;
-    padding: 10px;
-}
-.co2 {
-    /* float: left; */
-    /* margin-left: 100px; */
-    padding: 20px;
-    line-height: 10px;
-}
-.co2 h3{
-color: rgb(249, 246, 246);
-}
-.co2 p{
-    color: rgb(247, 249, 250);
-    font-size: 20px;
-    }
-.co2 small{
-color: rgb(243, 245, 248);
-/* background-color: black; */
-padding: 5px;
-/* font-size: 20px; */
+    /* margin-left: 40%; */
+    /* padding: 10px; */
 }
 .card_right1{
-    width: 820px;
+    width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     height: 100%;
     border-radius: 5px;
     padding: 20px;
     margin-bottom: 30px;
 
+}
+.bordr{
+    flex: 1;
+    border: 1px solid black;
+    display: flex;
+    align-items: center;
+   padding: 5px;
 }
 .card_right1 .btns{
     float: right;
@@ -103,7 +106,7 @@ padding: 5px;
     margin-bottom: 30px;
 }
 .card_right2 .sec1{
-    padding: 15px;
+    /* padding: 15px; */
     width: 100%;
 }
 .card_right2 .sec2{
