--- a/css/more.css
+++ b/css/more.css
@@ -5,7 +5,34 @@ body {
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
-    text-align: left;}
+    text-align: left; 
+}
+.h22{
+    font-weight: 550;
+    letter-spacing: -0.5px;
+    color: rgb(55, 53, 53);
+}
+.nb{
+    color: #1f5ca2;
+}
+ .text-big1 {
+    font-size: 1.25rem;
+    color: #303264;
+    font-weight: 600;
+}
+.text-big2 {
+    font-size: 2.55rem;
+    color: #303264;
+    font-weight: 700;
+}
+.text-big3 {
+    font-size: 1.25rem;
+    color: #303264;
+    font-weight: 2rem;
+}
+.title{
+    font-size: 1.1rem;
+}
     .small-heading {
         color: #303264 !important;
         font-weight: 600;
@@ -44,22 +71,28 @@ body {
 .deco{
     text-decoration: none;
 }
-.table{
-    width: 100% !important;
+.table2{
+    /* width: 100% !important; */
 padding: 20px;
  }
 .topp{
     margin-top: 4.5%;
 }
-.top2{
-   color: white;
-}
+
+/* fixed navbar */
 .blackk{
     color: black !important;
 }
-.whitee{
-    color: white;
+.btn_w1{
+    width: 150px;
 }
+.icon_small{
+    height: 10px;
+}
+.btn-rounded {
+    border-radius: 5rem !important;
+}
+
 .sadow{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 
@@ -77,14 +110,23 @@ padding: 20px;
     align-items: center;
     justify-content: space-between;
 }
+/* FIxed background */
 .bg_img {
     background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url(../img/s2.jpeg);
     filter: grayscale(90%);
     height: 200px;
     width: 100%;
-    display: flex;
-    align-items: center;
+    /* display: flex;
+    align-items: center; */
    }
+   .top2{
+    color: white;
+    /* margin-top: -20px; */
+ }
+ /* fixed bg */
+.whitee{
+    color: white;
+}
  
    .co_logo{
   background-color: white;
@@ -97,9 +139,7 @@ padding: 20px;
     padding: 10px;
 
    }
-   .icon-location{
-
-   }
+ 
    .main_container {
     padding: 2em 0;
     background-color: #f5f5f9;
@@ -127,9 +167,7 @@ padding: 20px;
     display: inline;
     position: relative;}
 /* right side cardss */
-.right_content{
 
-}
 .main_card{
     border-radius: 0.75rem 0.75rem 0 0;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
@@ -196,10 +234,20 @@ padding: 20px;
 .bodr2{
     border: 1px solid #1f5ca2;
     font-size: 1.4rem;
-    padding: 0 1rem;
+    padding: 5px;
     border-radius: 29px;
     display: inline;
     margin: auto;
+    width: 60px;
+}
+.bodr3{
+    border: 1px solid #1fa237;
+    font-size: 0.5rem;
+    padding: 3px;
+    border-radius: 5px;
+    display: inline;
+    margin: auto;
+    /* width: 60px; */
 }
 .bar_val{
     width: 100%;
@@ -207,12 +255,77 @@ padding: 20px;
     background-color: rgb(206, 197, 197);
 }
 .bar_val .bar_green{
-    background-color: rgb(117, 188, 11);
-    width: 19%;
+    background-color:#00c39c;
+    width: 80%;
     height: 4px;
 }
 .bar_val .bar_yellow{
-    background-color: rgb(232, 149, 24);
+    background-color: #fcb941;
     width: 100%;
     height: 4px;
 }
+.redRatio{
+    font-size: 25px;
+    color: red;
+    line-height: -1px;
+}
+.bar_val .bar_green2{
+    background-color: #00c39c;
+    width: 20%;
+    height: 4px;
+}
+.bar_val .bar_green3{
+    background-color: #00c39c;
+    width: 100%;
+    height: 4px;
+}
+.bar_val .bar_pp3{
+    background-color:#8e44ad;
+    width: 44%;
+    height: 4px;
+}
+.bar_val .bar_red{
+    background-color:#e1151f;
+    width: 67%;
+    height: 4px;
+}.bar_val .bar_yy{
+    background-color:#fec81b;
+    width: 84%;
+    height: 4px;
+}.bar_val .bar_p4{
+    background-color:#8e44ad;
+    width: 24%;
+    height: 4px;
+}
+
+.blur{
+    filter: blur(8px);
+    -webkit-filter: blur(8px);
+}
+.blur-top-text {
+    color: rgb(33, 31, 31);
+    font-weight: bold;
+    padding: 10px;
+    text-align: center;
+    margin-top: -30px;
+  }
+  .line_h{
+line-height: 0.8rem;
+  }
+  .line_h1{
+    line-height: 0.5rem;
+      }
+      .line_h2{    line-height: 0.5rem;
+      }
+      .list-unstyled{
+        padding-left: 0;
+        list-style: none;
+    }
+    .similer{
+        border-radius: 10px;
+        height: 200px;
+        width: 200px;
+    }
+    .nb1{
+        background-color: #1f5ca2;
+    }
