--- a/css/more.css
+++ b/css/more.css
@@ -1,14 +1,38 @@
 body {
     margin: 0;
-    font-family: "Nunito Sans",sans-serif,"Helvetica Neue Light","Helvetica Neue","Helvetica","Arial";
+    /* font-family: "Nunito Sans",sans-serif,"Helvetica Neue Light","Helvetica Neue","Helvetica","Arial"; */
+    
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
     text-align: left; 
 }
+body,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+li,
+div,
+td,
+th,
+small,
+label,
+button,
+input,
+select {
+    font-family: 'Montserrat', sans-serif; 
+font-family: 'Nunito Sans', sans-serif;
+ font-family: 'Open Sans', sans-serif; 
+}
 .h22{
-    font-weight: 550;
+    font-weight: 500;
     letter-spacing: -0.5px;
     color: rgb(55, 53, 53);
 }
@@ -48,9 +72,9 @@ body {
         cursor: pointer;
         text-decoration: none;
     }
-    .pp{
+    .table{
         /* padding: 20px; */
-        padding-left: 2rem !important;
+        padding-left: 20px !important;
     }
     .logo{
         height: 50px;
@@ -71,10 +95,6 @@ body {
 .deco{
     text-decoration: none;
 }
-.table2{
-    /* width: 100% !important; */
-padding: 20px;
- }
 .topp{
     margin-top: 4.5%;
 }
@@ -198,6 +218,7 @@ padding: 20px;
     border: 1px solid black;
     padding: 5px;
     border-radius: 5px;
+    width: auto;
 }
 .mr{
     margin-right: 10px;
@@ -329,3 +350,12 @@ line-height: 0.8rem;
     .nb1{
         background-color: #1f5ca2;
     }
+    .varified{
+        color: white;
+    }
+    .hide_nav{
+      display: none;
+    }
+    .hide_btns{
+        display: none;
+      }
