--- a/css/more.css
+++ b/css/more.css
@@ -359,3 +359,10 @@ line-height: 0.8rem;
     .hide_btns{
         display: none;
       }
+      .hide_btns2{
+        display: none;
+      }
+      .hide_pro{
+        display: none;
+
+      }
