--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,9 @@ a:focus {
     -webkit-transition: ease-out 0.5s;
     -moz-transition: ease-out 0.5s;
 }
+.signBtn{
+    border-radius: 60px;
+}
 
 .btn.btn-custom:hover {
     color: #E81C2E;
@@ -249,14 +252,14 @@ a:focus {
 }
 
 .nav-bar.nav-sticky .navbar {
-    padding: 5px 0;
+    padding: 5px 5;
 }
 
 .navbar-dark .navbar-nav .nav-link,
 .navbar-dark .navbar-nav .nav-link:focus,
 .navbar-dark .navbar-nav .nav-link:hover,
 .navbar-dark .navbar-nav .nav-link.active {
-    color: #070606;
+    color: #ffffff;
     /* psadding: 15px; */
     font-weight: 500;
     letter-spacing: 1px;
@@ -272,7 +275,7 @@ a:focus {
     margin-top: 0;
     border: 0;
     border-radius: 0;
-    background: #003990;
+    background: #012c6e;
 }
 
 .nav-bar .btn.btn-custom {
@@ -315,6 +318,7 @@ a:focus {
         background: #003990 !important;
         transition: .3s;
         width: 100%;
+        /* margin: 10px; */
         /* height: 250px; */
     }
 }
