--- a/css/more.css
+++ b/css/more.css
@@ -1,12 +1,19 @@
 body {
     margin: 0;
-    /* font-family: "Nunito Sans",sans-serif,"Helvetica Neue Light","Helvetica Neue","Helvetica","Arial"; */
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Nunito Sans",sans-serif,"Helvetica Neue Light","Helvetica Neue","Helvetica","Arial";
+    /* font-family: Arial, Helvetica, sans-serif; */
     font-size: 0.875rem;
     font-weight: 400;
     line-height: 1.5;
     color: #212529;
     text-align: left; 
+}
+h3, .h3 {
+    font-size: 1.53125rem;
+}
+
+.coName{
+    font-weight: 700;
 }
 /* body,
 h1,
@@ -32,7 +39,7 @@ font-family: 'Nunito Sans', sans-serif;
  font-family: 'Open Sans', sans-serif; 
 } */
 .h22{
-    font-weight: 600;
+    font-weight: 700;
     letter-spacing: -0.5px;
     color: rgb(55, 53, 53);
 }
