--- a/css/list.css
+++ b/css/list.css
@@ -1,155 +1,44 @@
-.pa{
-  padding: 20px;
-}
-.ce{
-  display: flex;
-  align-items: center;
-}
-.ma{
-  margin-bottom: -25px;
-}
-.ma1{
-  margin-bottom: 30px;
-}
-.cards{
-    margin-left: 10%;
-    margin-right: 10%;
-    margin-bottom:12% ;
-}
-.left1{
-  margin-left: 20px;
-}
-.right1{
-  float: right;
-}
-.row_cent{
- padding: 10px;
- align-items: center;
-}
-.card_left{
-  /* position: fixed; */
-    width: 100%;
-    /* height: 100%; */
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    font-family: arial;
-padding: 10%;
-margin-bottom: 2%;
 
+.hh4{
+  font-weight: 700;
+  font-size: 1.2125rem;
+  letter-spacing: -0.5px;
 }
-.ad{
-  background-image: url(../img/s2.jpeg);
-  filter: grayscale(60%);
-  height: 200px;
-  width: 100%;
-}
-.card_right {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 100%;
-    /* margin-bottom: 25%; */
-    /* text-align: center; */
-    font-family: arial;
-    /* height: 100%; */
-    
-  }
-  .cont{
-    margin-top: 5px;
-    /* height: 100%; */
-  }
-  .text{
-    /* float: left; */
-    margin-left: 170px;
-    /* margin-top: 10px; */
-    padding-top: 10px;
-  }
-  .title {
-    color: grey;
-    font-size: 13px;
-  }
-  .text p{
-    font-size: 13px;
-    line-height: 5px;
-    color: rgb(75, 73, 73);
-  }
-  
-  .buttonn {
-    border: none;
-    /* margin-top: -10px; */
-    outline: 0;
-    display: inline-block;
-    padding: 18px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    /* width: 100%; */
-    font-size: 18px;
-  }
-
-  .btn_right{
-  /* margin: 2%; */
-    /* float: right; */
-    border: none;
-    /* margin-top: -10px; */
-    outline: 0;
-    display: inline-block;
-    padding: 10px;
-    color: white;
-    background-color: rgb(27, 223, 86);
-    text-align: center;
-    cursor: pointer;
-    /* width: 100%; */
-    font-size: 15px;
-    border-radius: 5px;
-  }
-    a {
-    text-decoration: none;
-    font-size: 22px;
-    color: black;
-  }
-  
-  button:hover, a:hover {
-    opacity: 0.7;
-  }
-.black{
-    color: black !important;
-}
-.red{
-    background-color: red !important;
-}
-.heading p{
-    display: flex;
-    margin-bottom: 10px;
-    padding-bottom: 5px;
-    position: relative;
-    font-size: 16px;
-    font-weight: 700;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    color: #E81C2E;
-    /* text-align: center; */
-    justify-content: center;
-}
-.heading p::after {
-    position: absolute;
-    content: "";
-    width: 15%;
-    height: 2px;
-    /* left: 45%; */
-    bottom: 0;
-    background: #E81C2E;}
-    .gap{
-margin-top: 100px;
-margin-bottom: -80px;   
- }
- @media(max-width: 991.98px) {
-  .btn_right{
-    float: left;
-  }
-  .card_left{position: static;
-  width: 100%;
-padding: 20px;}
-
-.right1{
+.leftt{
   float: left;
 }
+.rightt{
+  float: right;
 }
+.bg-white{
+  background-color: white
+}
+.main-container{
+  padding: 2em 0;
+    background-color: #f5f5f9;
+    min-height: calc(100vh - 269px);
+}
+.card_left{
+  /* border: 0.1px solid rgb(137, 134, 134); */
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: white;
+
+}
+.card_right{
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  background-color: white;
+  width: auto;
+}
+.long-card{
+  padding: 5px;
+  /* border: 0.5px solid gray; */
+  /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
+  background-color: white;
+}
+
+
+@media(max-width: 991.98px) {
+
+
+}
+
