--- a/css/more.css
+++ b/css/more.css
@@ -41,7 +41,7 @@ font-family: 'Nunito Sans', sans-serif;
 .h22{
     font-weight: 700;
     letter-spacing: -0.5px;
-    color: rgb(55, 53, 53);
+    color: rgb(8 35 84);
 }
 .nb{
     color: #1f5ca2;
