--- a/css/list.css
+++ b/css/list.css
@@ -1,4 +1,5 @@
 
+
 .hh4{
   font-weight: 700;
   font-size: 1.2125rem;
@@ -24,6 +25,19 @@
   background-color: white;
 
 }
+.card_left h3{
+  margin-bottom: 0.5rem;
+  font-weight: 700;
+  line-height: 1.2;
+  color: #303264;
+}
+.card_left p{
+  margin-left: 5px;
+  padding: 1rem;
+    display: block;
+    color: #444;
+font-weight: 700;
+}
 .card_right{
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   background-color: white;
@@ -34,6 +48,10 @@
   /* border: 0.5px solid gray; */
   /* box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); */
   background-color: white;
+  transition: all .4s ease-in-out 0s;
+}
+.long-card:hover{
+background-color:rgb(176,176,176);
 }
 
 
