--- a/css/more_resp.css
+++ b/css/more_resp.css
@@ -1,4 +1,8 @@
 @media(max-width: 991.98px) {
+   .hide{
+      visibility: hidden;
+      margin: -10px;
+   }
     .bg_img {
         background-image: linear-gradient(rgba(0, 0, 0, 0.527),rgba(0, 0, 0, 0.5)) ,url(../img/s2.jpeg);
         filter: grayscale(90%);
@@ -154,4 +158,7 @@
           .hide_pro{
 display: block;
           }
+          .pollBoard{
+            width: 100%;
+        }
 }
