--- a/css/first.css
+++ b/css/first.css
@@ -284,7 +284,7 @@ padding: 150px;
         background-color: #f8f9fa;
      
      }
-    .show_nav{
+    .show_nav1{
   visibility: hidden;
     }
     .nav_h{
