--- a/css/more.css
+++ b/css/more.css
@@ -10,6 +10,13 @@ body {
 }
 h3, .h3 {
     font-size: 1.53125rem;
+
+}
+.h4{
+    font-size: 1.3rem;
+    font-weight: 700;
+    color: #303264;
+
 }
 
 .coName{
@@ -41,9 +48,12 @@ font-family: 'Nunito Sans', sans-serif;
 .h22{
     font-weight: 700;
     letter-spacing: -0.5px;
-    color:  rgb(48 66 99);
+    color:  #303264;
     font-size: 1.75rem;
 }
+.shadow-sm{
+    box-shadow: 0 0.125rem 0.25rem rgb(0 0 0 / 8%) !important;
+  }
 .h6{
     font-weight: 600;
 }
@@ -53,7 +63,7 @@ font-family: 'Nunito Sans', sans-serif;
  .text-big1 {
     font-size: 1.25rem;
     color: #303264;
-    font-weight: 600;
+    font-weight: 700;
 }
 .text-big2 {
     font-size: 2.55rem;
@@ -67,6 +77,7 @@ font-family: 'Nunito Sans', sans-serif;
 }
 .title{
     font-size: 1.1rem;
+    font-weight: 700;
 }
     .small-heading {
         color: #303264 !important;
@@ -126,7 +137,6 @@ font-family: 'Nunito Sans', sans-serif;
 
 .sadow{
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-
 }
 .m_left{
     margin-left: 20%;
@@ -386,3 +396,40 @@ line-height: 0.8rem;
        .flot{
         float: right;
        }
+   
+    .official{
+      margin-left: 400px;
+    }
+    .btn-outline-primary {
+        color: #1f5ca2;
+        border-color: #1f5ca2;
+    }
+    .font-weight-bold{
+        font-weight: 600;
+        font-size: 1.09375rem;
+    }
+    .primary{
+        color: #1f5ca2;
+        border-color: #1f5ca2;
+    }
+    .view{
+        color: #1f5ca2;
+        font-weight: 600;
+        font-size: 1rem;
+    }
+    .btn-primary {
+        color: #fff;
+        background-color: #1f5ca2;
+        border-color: #1f5ca2;
+    }
+    .font-1 {
+        font-size: 1rem;
+    }
+   .maSe{
+    margin-left: -171px;
+    background-color: #f0f2f3;
+   }
+   .icon{
+    color: #111;
+   }
+    
