--- a/css/first.css
+++ b/css/first.css
@@ -14,6 +14,8 @@ body {
 .h5{
     font-weight: 700;
     color: #212529;
+    font-size: 1rem;
+    padding-top: 15px;
 }
 .smalll{
     font-weight: 700;
@@ -286,7 +288,8 @@ padding: 150px;
 {
     overflow-x: auto;
     flex-wrap: nowrap;
-    margin: 20px;
+    /* margin: 10px; */
+    /* width: 100%; */
 }
 @media(max-width: 991.98px) {
     .hide_nav{
