--- a/css/list.css
+++ b/css/list.css
@@ -1,5 +1,4 @@
 
-
 .hh4{
   font-weight: 700;
   font-size: 1.2125rem;
@@ -82,7 +81,7 @@ background-color:rgb(176,176,176);
   width: 250px;
     }
     .show{
-      visibility: hidden;
+      /* visibility: hidden; */
     }
     .hide2{
       visibility: visible;
